Fixup anvil for winit rendering
- Since a lot of functionality is now in smithay's rendering module
  we can get rid of shm_load, shaders and the glium dependency.
- glium_drawer becomes drawing and only features some code to get from surfaces
  to textures for any(!) renderer.
  (Should probably moved into smithay at some point as well.)
- buffer_utils is only necessary to query the buffer size anymore.
- disable egl-buffer support temporarily

--- a/anvil/Cargo.toml
+++ b/anvil/Cargo.toml
@@ -8,18 +8,17 @@ edition = "2018"
 
 [dependencies]
 bitflags = "1.2.1"
-glium = { version = "0.29.0", default-features = false }
 input = { version = "0.5.0", features = ["udev"], optional = true }
 rand = "0.8"
 slog = { version = "2.1.1" }
-slog-term = "2.3"
+slog-term = "2.8"
 slog-async = "2.2"
 xkbcommon = "0.4.0"
 
 [dependencies.smithay]
 path = ".."
 default-features = false
-features = [ "renderer_glium", "backend_egl", "wayland_frontend" ]
+features = [ "renderer_gl", "backend_egl", "wayland_frontend" ]
 
 [dependencies.x11rb]
 optional = true
@@ -34,7 +33,7 @@ gl_generator = "0.14"
 default = [ "winit", "egl", "udev", "logind", "xwayland" ]
 egl = [ "smithay/use_system_lib" ]
 winit = [ "smithay/backend_winit" ]
-udev = [ "smithay/backend_libinput", "smithay/backend_udev", "smithay/backend_drm_atomic", "smithay/backend_drm_legacy", "smithay/backend_drm_gbm", "smithay/backend_drm_eglstream", "smithay/backend_drm_egl", "smithay/backend_session", "input" ]
+udev = [ "smithay/backend_libinput", "smithay/backend_udev", "smithay/backend_drm", "smithay/backend_gbm", "smithay/backend_egl", "smithay/backend_session", "input" ]
 logind = [ "smithay/backend_session_logind" ]
 elogind = ["logind", "smithay/backend_session_elogind" ]
 xwayland = [ "smithay/xwayland", "x11rb" ]
