--- a/anvil/Cargo.toml
+++ b/anvil/Cargo.toml
@@ -9,7 +9,8 @@ edition = "2018"
 [dependencies]
 bitflags = "1.2.1"
 input = { version = "0.5.0", features = ["udev"], optional = true }
-rand = "0.8"
+image = { version = "0.23.0", optional = true, default-features = false }
+rand = "0.7"
 slog = { version = "2.1.1" }
 slog-term = "2.8"
 slog-async = "2.2"
@@ -30,10 +31,10 @@ features = [ "composite" ]
 gl_generator = "0.14"
 
 [features]
-default = [ "winit", "egl", "udev", "logind", "xwayland" ]
+default = [ "winit", "udev", "logind", "xwayland" ]
 egl = [ "smithay/use_system_lib" ]
 winit = [ "smithay/backend_winit" ]
-udev = [ "smithay/backend_libinput", "smithay/backend_udev", "smithay/backend_drm", "smithay/backend_gbm", "smithay/backend_egl", "smithay/backend_session", "input" ]
+udev = [ "smithay/backend_libinput", "smithay/backend_udev", "smithay/backend_drm", "smithay/backend_gbm", "smithay/backend_egl", "smithay/backend_session", "input", "image"]
 logind = [ "smithay/backend_session_logind" ]
 elogind = ["logind", "smithay/backend_session_elogind" ]
 xwayland = [ "smithay/xwayland", "x11rb" ]
