--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,9 +16,9 @@ calloop = "0.6.2"
 cgmath = "0.18.0"
 dbus = { version = "0.9.0", optional = true }
 drm-fourcc = "^2.1.0"
-drm = { version = "^0.4.0-alpha1", git = "https://github.com/drakulix/drm-rs", branch = "next", optional = true }
-drm-ffi = { version = "^0.4.0-alpha1", git = "https://github.com/drakulix/drm-rs", branch = "next", optional = true }
-gbm = { version = "^0.6.0", git = "https://github.com/drakulix/gbm.rs", branch = "develop", optional = true, default-features = false, features = ["drm-support"] }
+drm = { version = "0.4.0", optional = true }
+drm-ffi = { version = "0.1.0", optional = true }
+gbm = { version = "0.6.0", optional = true, default-features = false, features = ["drm-support"] }
 input = { version = "0.5", default-features = false, optional = true }
 image = { version = "0.23.14", default-features = false, optional = true }
 lazy_static = "1"
