--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ members = [ "anvil" ]
 
 [dependencies]
 bitflags = "1"
-calloop = "0.6.2"
+calloop = {version = "0.8.0" }
 cgmath = "0.18.0"
 dbus = { version = "0.9.0", optional = true }
 drm-fourcc = "^2.1.1"
@@ -35,7 +35,7 @@ wayland-egl = { version = "0.28", optional = true }
 wayland-protocols = { version = "0.28", features = ["unstable_protocols", "server"], optional = true }
 wayland-server = { version = "0.28.3", optional = true }
 wayland-sys = { version = "0.28", optional = true }
-winit = { version = "0.24.0", optional = true }
+winit = { version = "0.25.0", optional = true }
 xkbcommon = "0.4.0"
 scan_fmt = { version = "0.2", default-features = false }
 
