--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ members = [ "anvil" ]
 
 [dependencies]
 bitflags = "1"
-calloop = {version = "0.8.0" }
+calloop = "0.8.0"
 cgmath = "0.18.0"
 dbus = { version = "0.9.0", optional = true }
 drm-fourcc = "^2.1.1"
