Barebones libseat support
.

--- a/anvil/Cargo.toml
+++ b/anvil/Cargo.toml
@@ -37,5 +37,6 @@ winit = [ "smithay/backend_winit" ]
 udev = [ "smithay/backend_libinput", "smithay/backend_udev", "smithay/backend_drm", "smithay/backend_gbm", "smithay/backend_egl", "smithay/backend_session", "input", "image", "smithay/image"]
 logind = [ "smithay/backend_session_logind" ]
 elogind = ["logind", "smithay/backend_session_elogind" ]
+libseat = ["smithay/backend_session_libseat" ]
 xwayland = [ "smithay/xwayland", "x11rb" ]
 test_all_features = ["default"]
