--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ bitflags = "1"
 calloop = "0.8.0"
 cgmath = "0.18.0"
 dbus = { version = "0.9.0", optional = true }
+libseat= { version = "0.1.1", optional = true } 
 drm-fourcc = "^2.1.1"
 drm = { version = "0.4.0", optional = true }
 drm-ffi = { version = "0.1.0", optional = true }
@@ -57,6 +58,7 @@ backend_session = []
 backend_udev = ["udev"]
 backend_session_logind = ["dbus", "backend_session", "pkg-config"]
 backend_session_elogind = ["backend_session_logind"]
+backend_session_libseat = ["libseat"]
 renderer_gl = ["gl_generator", "backend_egl"]
 use_system_lib = ["wayland_frontend", "wayland-sys", "wayland-server/use_system_lib"]
 wayland_frontend = ["wayland-server", "wayland-commons", "wayland-protocols", "tempfile"]
