--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,12 @@ edition = "2018"
 members = [ "anvil" ]
 
 [dependencies]
+appendlist = "1.4"
 bitflags = "1"
 calloop = "0.8.0"
 cgmath = "0.18.0"
 dbus = { version = "0.9.0", optional = true }
-libseat= { version = "0.1.1", optional = true } 
+downcast-rs = "1.2.0"
 drm-fourcc = "^2.1.1"
 drm = { version = "0.4.0", optional = true }
 drm-ffi = { version = "0.1.0", optional = true }
@@ -24,6 +25,7 @@ input = { version = "0.5", default-features = false, optional = true }
 image = { version = "0.23.14", default-features = false, optional = true }
 lazy_static = "1"
 libc = "0.2.70"
+libseat= { version = "0.1.1", optional = true }
 libloading = "0.7.0"
 nix = "0.20"
 slog = "2"
