Add `backend_session` feature to `backend_session_libseat`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,7 +60,7 @@ backend_session = []
 backend_udev = ["udev"]
 backend_session_logind = ["dbus", "backend_session", "pkg-config"]
 backend_session_elogind = ["backend_session_logind"]
-backend_session_libseat = ["libseat"]
+backend_session_libseat = ["backend_session", "libseat"]
 renderer_gl = ["gl_generator", "backend_egl"]
 use_system_lib = ["wayland_frontend", "wayland-sys", "wayland-server/use_system_lib"]
 wayland_frontend = ["wayland-server", "wayland-commons", "wayland-protocols", "tempfile"]
