--- a/anvil/Cargo.toml
+++ b/anvil/Cargo.toml
@@ -12,6 +12,7 @@ input = { version = "0.5.0", features = ["udev"], optional = true }
 thiserror = "1"
 xcursor = { version = "0.3.3", optional = true }
 image = { version = "0.23.14", default-features = false, optional = true }
+fps_ticker = { version = "1.0.0", optional = true }
 rand = "0.7"
 slog = { version = "2.1.1" }
 slog-term = "2.8"
@@ -43,4 +44,5 @@ logind = [ "smithay/backend_session_logind" ]
 elogind = ["logind", "smithay/backend_session_elogind" ]
 libseat = ["smithay/backend_session_libseat" ]
 xwayland = [ "smithay/xwayland", "x11rb" ]
-test_all_features = ["default"]
+debug = [ "fps_ticker", "image/png" ]
+test_all_features = ["default", "debug"]
