--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ libc = "0.2.70"
 libseat= { version = "0.1.1", optional = true }
 libloading = "0.7.0"
 nix = "0.22"
+rand = "0.8.4"
 slog = "2"
 slog-stdlog = { version = "4", optional = true }
 tempfile = { version = "3.0", optional = true }
