--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,7 +42,7 @@ thiserror = "1.0.2"
 udev = { version = "0.6", optional = true }
 wayland-commons = { version = "0.29.0", optional = true }
 wayland-egl = { version = "0.29.0", optional = true }
-wayland-protocols = { version = "0.29.0", features = ["unstable_protocols", "server"], optional = true }
+wayland-protocols = { version = "0.29.0", features = ["unstable_protocols", "staging_protocols", "server"], optional = true }
 wayland-server = { version = "0.29.0", optional = true }
 wayland-sys = { version = "0.29.0", optional = true }
 winit = { version = "0.25.0", optional = true }
