--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ input = { version = "0.6", default-features = false, features=["libinput_1_14"],
 lazy_static = "1"
 libc = "0.2.70"
 libseat= { version = "0.1.1", optional = true }
-libloading = "0.7.0"
+libloading = { version="0.7.0", optional = true } 
 nix = "0.22"
 rand = "0.8.4"
 slog = "2"
@@ -61,7 +61,7 @@ default = ["backend_drm", "backend_gbm", "backend_libinput", "backend_udev", "ba
 backend_winit = ["winit", "wayland-server/dlopen", "backend_egl", "wayland-egl", "renderer_gl"]
 backend_drm = ["drm", "drm-ffi"]
 backend_gbm = ["gbm"]
-backend_egl = ["gl_generator"]
+backend_egl = ["gl_generator", "libloading"]
 backend_libinput = ["input"]
 backend_session = []
 backend_udev = ["udev", "input/udev"]
