--- a/anvil/Cargo.toml
+++ b/anvil/Cargo.toml
@@ -36,7 +36,7 @@ features = [ "composite" ]
 gl_generator = "0.14"
 
 [features]
-default = [ "winit", "udev", "logind", "egl", "xwayland" ]
+default = [ "winit", "udev", "logind", "egl", "xwayland", "x11" ]
 egl = [ "smithay/use_system_lib", "smithay/backend_egl" ]
 winit = [ "smithay/backend_winit" ]
 udev = [ "smithay/backend_libinput", "smithay/backend_udev", "smithay/backend_drm", "smithay/backend_gbm", "smithay/backend_egl", "smithay/backend_session", "input", "image", "smithay/renderer_gl", "xcursor" ]
@@ -44,5 +44,6 @@ logind = [ "smithay/backend_session_logind" ]
 elogind = ["logind", "smithay/backend_session_elogind" ]
 libseat = ["smithay/backend_session_libseat" ]
 xwayland = [ "smithay/xwayland", "x11rb", "smithay/x11rb_event_source" ]
+x11 = [ "smithay/backend_x11", "x11rb", "egl", "smithay/renderer_gl" ]
 debug = [ "fps_ticker", "image/png" ]
 test_all_features = ["default", "debug"]
