--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ libc = "0.2.103"
 libseat= { version = "0.1.1", optional = true }
 libloading = { version="0.7.0", optional = true } 
 nix = "0.22"
+once_cell = "1.8.0"
 rand = "0.8.4"
 slog = "2"
 slog-stdlog = { version = "4", optional = true }
