--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,12 +42,12 @@ slog-stdlog = { version = "4", optional = true }
 tempfile = { version = "3.0", optional = true }
 thiserror = "1.0.25"
 udev = { version = "0.6", optional = true }
-wayland-commons = { version = "0.29.0", optional = true }
-wayland-egl = { version = "0.29.0", optional = true }
-wayland-protocols = { version = "0.29.0", features = ["unstable_protocols", "staging_protocols", "server"], optional = true }
-wayland-server = { version = "0.29.0", optional = true }
-wayland-sys = { version = "0.29.0", optional = true }
-winit = { version = "0.26", optional = true }
+# wayland-commons = { git = "https://github.com/Smithay/wayland-rs", branch="rework-317", optional = true }
+wayland-egl = { git = "https://github.com/Smithay/wayland-rs", branch="rework-317", optional = true }
+# wayland-protocols = { git = "https://github.com/Smithay/wayland-rs", branch="rework-317", features = ["unstable_protocols", "staging_protocols", "server"], optional = true }
+wayland-server = { git = "https://github.com/Smithay/wayland-rs", branch="rework-317", optional = true }
+wayland-sys = { git = "https://github.com/Smithay/wayland-rs", branch="rework-317", optional = true }
+winit = { version = "0.26.0", optional = true }
 x11rb = { version = "0.9.0", optional = true }
 xkbcommon = "0.4.0"
 scan_fmt = { version = "0.2.3", default-features = false }
@@ -74,11 +74,11 @@ backend_session_elogind = ["backend_session_logind"]
 backend_session_libseat = ["backend_session", "libseat"]
 desktop = ["indexmap", "wayland_frontend"]
 renderer_gl = ["gl_generator", "backend_egl"]
-use_system_lib = ["wayland_frontend", "wayland-sys", "wayland-server/use_system_lib"]
-wayland_frontend = ["wayland-server", "wayland-commons", "wayland-protocols", "tempfile"]
+use_system_lib = ["wayland_frontend", "wayland-sys"]
+wayland_frontend = ["wayland-server",  "tempfile"]
 x11rb_event_source = ["x11rb"]
 xwayland = ["wayland_frontend"]
-test_all_features = ["default", "use_system_lib", "wayland-server/dlopen"]
+test_all_features = ["default"]
 
 [[example]]
 name = "raw_drm"
