--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,7 +45,7 @@ thiserror = "1.0.25"
 udev = { version = "0.6", optional = true }
 # wayland-commons = { git = "https://github.com/Smithay/wayland-rs", branch="rework-317", optional = true }
 wayland-egl = { version = "0.30.0-alpha1", optional = true }
-# wayland-protocols = { git = "https://github.com/Smithay/wayland-rs", branch="rework-317", features = ["unstable_protocols", "staging_protocols", "server"], optional = true }
+wayland-protocols = { version  = "0.30.0-alpha1", features = ["unstable_protocols", "server"], optional = true }
 wayland-server = { version = "0.30.0-alpha1", optional = true }
 wayland-sys = { version  = "0.30.0-alpha1", optional = true }
 winit = { version = "0.26.0", optional = true }
@@ -77,7 +77,7 @@ desktop = ["indexmap", "wayland_frontend"]
 renderer_gl = ["gl_generator", "backend_egl"]
 renderer_multi = ["backend_drm"]
 use_system_lib = ["wayland_frontend", "wayland-sys"]
-wayland_frontend = ["wayland-server", "tempfile"]
+wayland_frontend = ["wayland-server", "wayland-protocols", "tempfile"]
 x11rb_event_source = ["x11rb"]
 xwayland = ["wayland_frontend"]
 test_all_features = ["default"]
