WIP: wayland backend

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,6 +62,10 @@ x11rb = { version = "0.10.0", optional = true }
 xkbcommon = "0.5.0"
 scan_fmt = { version = "0.2.3", default-features = false }
 
+smithay-client-toolkit = { git = "https://github.com/Smithay/client-toolkit", branch = "master", optional = true }
+wayland-scanner = { version = "=0.30.0-beta.9", optional = true }
+memmap2 = { version = "0.5.2", optional = true }
+
 [dev-dependencies]
 slog-term = "2.3"
 
@@ -70,8 +74,9 @@ gl_generator = { version = "0.14", optional = true }
 pkg-config = { version = "0.3.17", optional = true }
 
 [features]
-default = ["backend_drm", "backend_gbm", "backend_libinput", "backend_udev", "backend_session_logind", "backend_x11", "backend_winit", "desktop", "renderer_gl", "renderer_multi", "xwayland", "wayland_frontend", "slog-stdlog", "backend_vulkan"]
+default = ["backend_drm", "backend_gbm", "backend_libinput", "backend_udev", "backend_session_logind", "backend_x11", "backend_wayland", "backend_winit", "desktop", "renderer_gl", "renderer_multi", "xwayland", "wayland_frontend", "slog-stdlog", "backend_vulkan"]
 backend_winit = ["winit", "backend_egl", "wayland-egl", "renderer_gl"]
+backend_wayland = ["smithay-client-toolkit", "backend_gbm", "backend_drm", "memmap2", "wayland-scanner"]
 backend_x11 = ["x11rb", "x11rb/dri3", "x11rb/xfixes", "x11rb/present", "x11rb_event_source", "backend_gbm", "backend_drm", "backend_egl"]
 backend_drm = ["drm", "drm-ffi"]
 backend_gbm = ["gbm"]
