--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -28,14 +28,14 @@ jobs:
           override: true
 
       - name: System dependencies
-        run: sudo apt-get update; sudo apt-get install libudev-dev libgbm-dev libxkbcommon-dev libegl1-mesa-dev libwayland-dev libinput-dev libsystemd-dev libdbus-1-dev
+        run: sudo apt-get update; sudo apt-get install libudev-dev libgbm-dev libxkbcommon-dev libegl1-mesa-dev libwayland-dev libinput-dev libsystemd-dev libdbus-1-dev libx11-dev libx11-xcb-dev
       
       - name: Downgrade log
         uses: actions-rs/cargo@v1
         with:
           command: update
           args: -p log --precise 0.4.14
-      
+
       - name: Build Documentation
         uses: actions-rs/cargo@v1
         with:
