--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,7 +66,7 @@ backend_winit = ["winit", "wayland-server/dlopen", "backend_egl", "wayland-egl",
 backend_x11 = ["x11rb", "x11rb/dri3", "x11rb/xfixes", "x11rb/present", "x11rb_event_source", "backend_gbm", "backend_drm", "backend_egl"]
 backend_drm = ["drm", "drm-ffi"]
 backend_gbm = ["gbm"]
-backend_egl = ["gl_generator", "libloading"]
+backend_egl = ["gl_generator", "libloading", "wayland-egl"]
 backend_libinput = ["input"]
 backend_session = []
 backend_udev = ["udev", "input/udev"]
