--- a/Cargo.toml
+++ b/Cargo.toml
@@ -91,7 +91,7 @@ renderer_multi = ["backend_drm"]
 use_system_lib = ["wayland_frontend", "wayland-backend/server_system", "wayland-sys"]
 wayland_frontend = ["wayland-server", "wayland-protocols", "tempfile"]
 x11rb_event_source = ["x11rb"]
-xwayland = ["wayland_frontend"]
+xwayland = ["wayland_frontend", "x11rb/composite"]
 test_all_features = ["default", "use_system_lib", "renderer_glow"]
 
 [[example]]
