--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -40,7 +40,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: doc
-          args: --no-deps --features "test_all_features" -p smithay -p calloop -p dbus -p drm -p gbm -p input -p nix -p udev -p slog -p wayland-server -p wayland-commons -p wayland-protocols -p winit -p x11rb
+          args: --no-deps --features "test_all_features" -p smithay -p calloop:0.10.0 -p dbus -p drm -p gbm -p input -p nix:0.22.3 -p udev -p slog -p wayland-server -p wayland-commons -p wayland-protocols -p winit -p x11rb
 
       - name: Setup index
         run: cp ./doc_index.html ./target/doc/index.html
