--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -202,7 +202,63 @@ jobs:
         with:
           command: test
           args: --no-default-features --features "${{ matrix.features }}"
-  
+
+  smallvil:
+    needs:
+      - format
+      - clippy-check
+      # - smithay-tests # Temporarily disable the requirement for smithay-tests
+    strategy:
+      fail-fast: false
+
+    env:
+      RUSTFLAGS: "-D warnings"
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout sources
+        uses: actions/checkout@v2
+
+      - name: Cargo cache
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+          key: ${{ runner.os }}-cargo-rust_stable-${{ hashFiles('**/Cargo.toml') }}
+
+      - name: Rust toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          override: true
+          default: true
+          profile: minimal
+
+      - name: System dependencies
+        run: sudo apt-get update; sudo apt-get install libxkbcommon-dev libegl1-mesa-dev libwayland-dev
+
+      - name: Build cache
+        uses: actions/cache@v2
+        with:
+          path: target
+          key: ${{ runner.os }}-build-rust_stable-smallvil-feature_${{ matrix.features }}-${{ hashFiles('**/Cargo.toml') }}
+      
+      - name: Downgrade log
+        uses: actions-rs/cargo@v1
+        with:
+          command: update
+          args: -p log --precise 0.4.14
+      
+      - name: Test smallvil
+        uses: actions-rs/cargo@v1
+        env:
+          RUST_BACKTRACE: full
+        with:
+          command: test
+          args: --manifest-path "./smallvil/Cargo.toml""
+
   anvil-tests:
     if: ${{ false }}  # disable for now
     needs:
