--- a/smallvil/Cargo.toml
+++ b/smallvil/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 slog = { version = "2.1.1" }
 slog-stdlog = "4.1.0"
-bitflags = "*"
+bitflags = "1"
 
 [dependencies.smithay]
 path = "../"
