--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,6 +58,9 @@ x11rb = { version = "0.9.0", optional = true }
 xkbcommon = "0.4.0"
 scan_fmt = { version = "0.2.3", default-features = false }
 
+[patch.crates-io]
+winit = { git = "https://github.com/rust-windowing/winit", rev = "4c39b3188cee29548761b57f38e4aa046cbe31ea" }
+
 [dev-dependencies]
 slog-term = "2.3"
 
