--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -351,15 +351,19 @@ jobs:
         include:
           - job_name: "Core tests"
             gtest_filter: "SelfTest*:FrameSubmission*"
+            flag: core
           - job_name: "Output tests"
             gtest_filter: "XdgOutputV1Test*"
+            flag: output
           - job_name: "Pointer input tests"
             gtest_filter: "*/SurfacePointerMotionTest*"
+            flag: pointer-input
 
     name: "WLCS: ${{ matrix.job_name }}"
 
     env:
       RUSTFLAGS: "-D warnings"
+      GRCOV_VERSION: "0.8.10"
 
     runs-on: ubuntu-latest
 
@@ -373,24 +377,34 @@ jobs:
           path: |
             ~/.cargo/registry
             ~/.cargo/git
-          key: ${{ runner.os }}-cargo-rust_stable-${{ hashFiles('**/Cargo.toml') }}
+          key: ${{ runner.os }}-cargo-rust_nightly-${{ hashFiles('**/Cargo.toml') }}
 
       - name: Rust toolchain
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: stable
+          toolchain: nightly
           override: true
           default: true
           profile: minimal
+          components: llvm-tools-preview
+
+      - name: grcov cache
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cargo/bin/grcov
+            ~/.cargo/.crates.toml
+            ~/.cargo/.crates2.json
+          key: ${{ runner.os }}-grcov-${{ env.GRCOV_VERSION }}
+
+      - name: Install grcov
+        uses: actions-rs/cargo@v1
+        with:
+          command: install
+          args: grcov --version ${{ env.GRCOV_VERSION }}
 
       - name: System dependencies
         run: sudo apt-get update; sudo apt-get install -y cmake libgtest-dev google-mock libboost-dev libxkbcommon-dev libwayland-dev
-
-      - name: Build cache
-        uses: actions/cache@v2
-        with:
-          path: target
-          key: ${{ runner.os }}-build-rust_stable-wlcs-${{ hashFiles('**/Cargo.toml') }}
 
       - name: WLCS build cache
         uses: actions/cache@v2
@@ -411,9 +425,20 @@ jobs:
         uses: actions-rs/cargo@v1
         env:
           RUST_BACKTRACE: full
+          RUSTFLAGS: "-Cinstrument-coverage --cfg coverage"
         with:
           command: build
           args: --manifest-path "./wlcs_anvil/Cargo.toml"
 
       - name: Run test suite
         run: ./wlcs/wlcs ./target/debug/libwlcs_anvil.so --gtest_filter="${{ matrix.gtest_filter }}"
+        env:
+          LLVM_PROFILE_FILE: "anvil-wlcs-%p-%m.profraw"
+
+      - name: Coverage
+        run: grcov . --binary-path ./target/debug -s . -t lcov --branch --llvm --ignore-not-existing --ignore '*/examples/*' --ignore '*/tests/*' --ignore '*/.cargo/registry/*' --excl-br-start "mod tests \{" --excl-start "mod tests \{" --excl-br-line "#\[derive\(" --excl-line "#\[derive\(" -o lcov.info
+
+      - name: Upload to codecov.io
+        uses: codecov/codecov-action@v1
+        with:
+          flags: wlcs-${{ matrix.flag }}
